@@ -1,3 +1,4 @@
+    - fixed bug with label for html_options (Monte)
     - added caching to config file loading (Monte)
     - added "extra" parameter to mailto function (Monte,
       Massimiliano Perantoni)
